--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Sistemas2\\envs\\sga\\Scripts\\python.exe"
+    "python.pythonPath": "env_ecomer/bin/python"
 }
